# regcred-ecr

./: .gitignore  Cargo.toml  Dockerfile  README.MD  example.env
examples/: job.example.yaml
src/: creds.rs  main.rs
