[package]
name = "regcred-ecr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version= "1.5.15", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
tokio = { version = "1", features = ["full"] }
aws-sdk-ecr = { version = "1.0.0", features = ["behavior-version-latest"]}
serde = { version = "1.0", features = ["derive"] }
aws-types = "1.3.4"
log = "0.4"
env_logger = "0.11.6"
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
base64 = "0.22.1"
serde_json = "1.0.137"
dotenv = "0.15.0"
